--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -56,7 +56,7 @@
       <div class="item"><%= vote.id_tour %></div>
       <div class="item"><%= vote.code_postal %></div>
       <div class="item"><%= vote.bureau_de_vote %></div>
-      <div class="item"><%= vote.created_at %></div>
+      <div class="item_long"><%= vote.created_at %></div>
     </li>
     <% end %>
   </ul>
