--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -40,6 +40,11 @@
   </div>
 </div>
 
+<%= form_tag admin_votes_path , :method => 'get' do %>
+<%= text_field_tag :search, params[:search] %>
+<%= submit_tag "Filtrer" %>
+<% end %>
+
 
 <div>
   <ul class="list-group ">
