--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,6 +5,20 @@
   <div class="panel-body">
     <%= form_for @user do |f| %>
 
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@user.errors.count, "error") %> A empeché cet enregistrement :</h2>
+
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+
+
     <div class="form-group">
       <%= f.label :encrypted_code, "Nouveau Code", :class => "col-sm-4 control-label" %>
       <div class="col-sm-6">
