--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -34,6 +34,15 @@
   </div>
 </div>
 
+
+<%= form_tag filter_path , :method => 'get' do %>
+<%= label_tag "Code Postal"%>
+<%= number_field_tag :search, params[:search] %>
+<%= label_tag "Tour"%>
+<%= number_field_tag :tour, params[:tour] %>
+<%= submit_tag "Filtrer" %>
+<% end %>
+
 <div>
   <ul class="list-group ">
     <li class="list-group-item grey">
