--- a/app/views/admin/votes/filter.html.erb
+++ b/app/views/admin/votes/filter.html.erb
@@ -1,14 +1,37 @@
-<%= form_tag admin_filter_path , :method => 'get' do %>
+ <div class="panel panel-default">
+   <div class="panel-heading">Résultats du tour</div>
+   <div class="panel-body">
+     <ul class="list-group result">
+       <li class="list-group-item grey">
+         <div class="item">Candidat</div>
+         <div class="item">Résultat</div>
+       </li>
+       <% @resultst1.each do |result| %>
+       <li class="list-group-item ">
+         <div class="item"><%= @candidates.find(result[0]).prenom %> <%= @candidates.find(result[0]).nom %> </div>
+         <div class="item"><%= (result[1] * 100.0 / @votes.count).round(2) %>%</div>
+       </li>
+       <% end %>
+     </ul>
+   </div>
+ </div>
+ 
+<div class="panel panel-default">
+  <div class="panel-heading">Filtrer les résultats par code postaux</div>
+  <div class="panel-body">
+<%= form_tag admin_filter_path , :class => "form-horizontal",:method => 'get' do %>
 <%= label_tag "Code Postal"%>
-<%= number_field_tag :search, params[:search] %>
+<%= number_field_tag :search, params[:search], :class => "form-control" %>
 <%= label_tag "Tour"%>
-<%= number_field_tag :tour, params[:tour] %>
-<%= submit_tag "Filtrer" %>
+<%= number_field_tag :tour, params[:tour], :class => "form-control"  %>
+<%= submit_tag "Filtrer", :class => "btn btn-primary" %>
 <% end %>
+</div>
+</div>
 
 
 <div>
-  <h2>Nombre total de votes pour cette circonsciption:<%= @count %><h2>
+  <h4>Nombre total de votes pour cette circonsciption:<%= @count %></h4>
   <ul class="list-group ">
     <li class="list-group-item grey">
       <div class="item">Candidat</div>
