--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -35,13 +35,18 @@
  </div>
  
 
-<%= form_tag filter_path , :method => 'get' do %>
+<div class="panel panel-default">
+  <div class="panel-heading">Filtrer les résultats par code postaux</div>
+  <div class="panel-body">
+<%= form_tag admin_filter_path , :class => "form-horizontal",:method => 'get' do %>
 <%= label_tag "Code Postal"%>
-<%= number_field_tag :search, params[:search] %>
+<%= number_field_tag :search, params[:search], :class => "form-control" %>
 <%= label_tag "Tour"%>
-<%= number_field_tag :tour, params[:tour] %>
-<%= submit_tag "Filtrer" %>
+<%= number_field_tag :tour, params[:tour], :class => "form-control"  %>
+<%= submit_tag "Filtrer", :class => "btn btn-primary" %>
 <% end %>
+</div>
+</div>
 
  <div>
    <ul class="list-group ">
