--- a/app/views/votes/filter.html.erb
+++ b/app/views/votes/filter.html.erb
@@ -6,7 +6,7 @@
          <div class="item">Candidat</div>
          <div class="item">Résultat</div>
        </li>
-       <% @resultst1.each do |result| %>
+       <% @results.each do |result| %>
        <li class="list-group-item ">
          <div class="item"><%= @candidates.find(result[0]).prenom %> <%= @candidates.find(result[0]).nom %> </div>
          <div class="item"><%= (result[1] * 100.0 / @votes.count).round(2) %>%</div>
